--- a/Horrorcore.html
+++ b/Horrorcore.html
@@ -1,32 +1,14 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="/css/main.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="/css/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="/css/print.css" media="print" />
-
-    <title>Horrorcore</title>
-	<style type="text/css"><!--
-body { color: #7281A8; }" 
-//-->
-</style>
-	<script type="text/javascript">
-		function toggle(id){
-			var elem = document.getElementById(id);
-			var to = elem.style.display=="block"?"none":"block";
-			elem.style.display=to;
-		}
-	</script>
-  </head>
-
-  <body>
-
-    <header>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<title>Horrorcore</title>
+<link rel="stylesheet" type="text/css" href="/css/main.css" media="screen" />
+</head>
+<body>
+<header>
       <div class="container">
-        <a href="Stash.htm" class="btn">Back to Stash</a>
+        <a href="Stash.html" class="btn">Back to Stash</a>
         <h2></h2>
 ./+1134 Productions
 ./+1134 Productions/Cretins - Cretinism (2006) (FLAC)
@@ -1796,5 +1778,4 @@ body { color: #7281A8; }"
 ./$woop/God Awful
 ./$woop/Music 2 Drive By
 ./$woop/No Religion
-</pre>
 </body></html>
