--- a/Horrorcore.html
+++ b/Horrorcore.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" type="text/css" href="/css/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="/css/print.css" media="print" />
 
-    <title>Videos</title>
+    <title>Horrorcore</title>
 	<style type="text/css"><!--
-body { color: #7281A8; }" 
+body { color: #9acc79; }" 
 //-->
 </style>
 	<script type="text/javascript">
