--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
 
     <header>
       <div class="container">
-        <h1>Stash (Updated 08/28/2014)</h1>
+        <h1>Stash (Updated 2016/06/11)</h1>
         <h2></h2>
 
         <section id="downloads">
 		<a href="Electronic.html" class="btn">Electronic</a>
           <a href="Horrorcore.html" class="btn">Horrorcore</a>
-		  <a href="Pop.html" class="btn">Indie & Pop</a>
+		  <a href="Pop.html" class="btn">Pop</a>
           <a href="Metal.html" class="btn">Metal</a>
           <a href="Misc.html" class="btn">Misc.</a>
 		   <a href="Psychopathic.html" class="btn">Psychopathic</a>
 		   <a href="Punk.html" class="btn">Punk</a>
 		   <a href="Rap.html" class="btn">Rap</a>
 		   <a href="Rock.html" class="btn">Rock</a>
-		   <a href="Soundtracks.html" class="btn">OST</a>
+		   <a href="Soundtracks.html" class="btn">Soundtracks</a>
 		   <a href="Videos.html" class="btn">Videos</a>
         </section>
       </div>
