--- a/Videos.html
+++ b/Videos.html
@@ -4,9 +4,9 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="css/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="css/print.css" media="print" />
 
     <title>Videos</title>
 	<style type="text/css"><!--
@@ -26,7 +26,7 @@ body { color: #7281A8; }"
 
     <header>
       <div class="container">
-        <a href="Stash.htm" class="btn">Back to Stash</a>
+        <a href="index.html" class="btn">Back to Stash</a>
         <h2></h2>
 		
         <section id="downloads">
