--- a/Videos.html
+++ b/Videos.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" type="text/css" href="/css/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="/css/print.css" media="print" />
 
-    <title>Videos</title>
+    <title>Video</title>
 	<style type="text/css"><!--
-body { color: #7281A8; }" 
+body { color: #9acc79; }" 
 //-->
 </style>
 	<script type="text/javascript">
@@ -28,27 +28,27 @@ body { color: #7281A8; }"
       <div class="container">
         <a href="index.html" class="btn">Back to Stash</a>
         <h2></h2>
-		
+    
         <section id="downloads">
-		  <a href="#action" class="btn">Action</a>
+      <a href="#action" class="btn">Action</a>
           <a href="#comedy" class="btn">Comedy</a>
           <a href="#drama" class="btn">Drama</a>
-		  <a href="#family" class="btn">Family</a>
+      <a href="#family" class="btn">Family</a>
           <a href="#horror" class="btn">Horror</a>
           <a href="#sci" class="btn">Sci-Fi</a>
-		   <a href="#tv" class="btn">Shows</a>
-		   <a href="#cky" class="btn">CKY</a>
-		   <a href="#docu" class="btn">Documentaries</a>
-		   <a href="#miranda" class="btn">Miranda Cosgrove</a>
-		   <a href="#music" class="btn">Music</a>
-		   <a href="#other" class="btn">Other</a>
-		   <a href="#standup" class="btn">Stand Up Comedy</a>
-		   <a href="#wrestling" class="btn">Wrestling</a>
+       <a href="#tv" class="btn">Shows</a>
+       <a href="#cky" class="btn">CKY</a>
+       <a href="#docu" class="btn">Documentaries</a>
+       <a href="#miranda" class="btn">Miranda Cosgrove</a>
+       <a href="#music" class="btn">Music</a>
+       <a href="#other" class="btn">Other</a>
+       <a href="#standup" class="btn">Stand Up Comedy</a>
+       <a href="#wrestling" class="btn">Wrestling</a>
         </section>
       </div>
     </header>
 
-	<A NAME="action"></A>
+  <A NAME="action"></A>
 <font color="#47F197" size="5">Action</font><br>
 ./2 Fast 2 Furious (2003)<br>
 ./Batman & Robin (1997)<br>
@@ -1120,6 +1120,5 @@ WWF: Action Zone!<br>
 WWF: Best Of Wrestlemania I-XIV<br>
 WWE: Wrestlemania XXVII (2011)<br>
 <A HREF="#Top">Go to the top of this page.</A>
-<IMG SRC="images/.png" width="1100" height="250" ALT="film" ALIGN=BOTTOM>
-</pre>
-</body></html>
+</body>
+</html>
