--- a/index.html
+++ b/index.html
@@ -48,24 +48,28 @@
 <p>Links:</p>
 
 <ul>
-<li>Programs: Here are some programs I use to make things easier.<a targetid="programs" class="addinfo" href="#">[Show]</a></li>
-<div id="programs" style="display: none;">
-Here are some useful programs:<br>
-1.) <a href="http://www.foobar2000.org/" title=Foobar2000">Foobar2000</a><br>
-2.) <a href="http://www.cuteftp.com/" title=CuteFTP">CuteFTP</a><br>
-3.) <a href="http://www.mozilla.org/en-US/firefox/" title=Firefox">Firefox</a></div>
+<li>Intersting things<a targetid="projects" class="addinfo" href="#">[Show]</a></li>
+<div id="projects" style="display: none;">
+Here are some interesting things for you to look into:<br>
+<a href="https://www.eff.org/" title=EFF">Electronic Frontier Foundation</a>
+<a href="https://freenetproject.org/" title=freenet">Freenet</a><br>
+<a href="https://geti2p.net/" title=i2p">i2p</a><br>
+<a href="https://www.torproject.org/" title=Tor">Tor</a>
+<a href="https://wikileaks.org/" title=Wikileaks">Wikileaks</a>
+</div>
 <li>Sites: Here are some sites I browse frequently.<a class="addinfo" href="#" targetid="sites">[Show]</a></li>
 <div id="sites" style="display:none;">
-1.) <a href="https://boards.4chan.org/g/" title=Foobar2000">/g/</a><br>
-2.) <a href="https://boards.4chan.org/mu/" title=Foobar2000">/mu/</a><br>
-3.) <a href="http://www.wallbase.cc/" title=Foobar2000">Wallbase</a><br>
-Please note that <a href="https://4chan.org" title=4chan">4chan</a> is best browsed with <a href="https://github.com/ahodesuka/4chan-Style-Script/raw/stable/4chanSS.user.js" title=4chan-style-script">4chan-Style-Script</a> and <a href="https://raw.github.com/mayhemydg/4chan-x/stable/4chan_x.user.js" title=4chanX">4chan X</a>
-</div>
-<li>Addons: Here are some addons I use for <a href="http://www.mozilla.org/en-US/firefox/" title=Firefox">Firefox</a> that make browsing more tolerable.<a class="addinfo" href="#" targetid="addons">[Show]</a></li>
-<div id="addons" style="display:none;">
-1.) <a href="https://addons.mozilla.org/firefox/downloads/latest/1865/addon-1865-latest.xpi" title="AdblockPlus">Install</a> AdblockPlus<br>
-2.) <a href="https://addons.mozilla.org/firefox/downloads/latest/3682/addon-3682-latest.xpi" title="AddtoSearchBar">Install</a> Add to Search Bar</a><br>
-3.) <a href="https://addons.mozilla.org/firefox/downloads/latest/6623/addon-6623-latest.xpi" title="BetterPrivacy">Install</a> BetterPrivacy</a><br>
+<a href="https://boards.4chan.org/g/" title=g">/g/</a><br>
+<a href="https://boards.4chan.org/mu/" title=g">/mu/</a><br>
+<a href="https://reddit.com/r/firefox" title=Reddit">Reddit: Firefox</a><br>
+<a href="https://reddit.com/r/Horrorcore" title=Reddit">Reddit: Horrorcore</a><br>
+<a href="https://reddit.com/r/Linux" title=Reddit">Reddit: Linux</a><br>
+<a href="https://reddit.com/r/Piracy" title=Reddit">Reddit: Piracy</a><br>
+<a href="https://reddit.com/r/technology" title=Reddit">Reddit: Technology</a><br>
+<a href="https://reddit.com/r/tor" title=Reddit">Reddit: Tor</a><br>
+<a href="https://reddit.com/r/torrents" title=Reddit">Reddit: Torrents</a><br>
+<a href="https://reddit.com/r/trackers" title=Reddit">Reddit: Trackers</a><br>
+Please note that <a href="https://4chan.org" title=4chan">4chan</a> is best browsed with <a href="https://nebukazar.github.io/OneeChan/builds/OneeChan.user.js" title=OneeChan">OneeChan</a> and <a href="https://www.4chan-x.net/builds/4chan-X.user.js" title=4chanX">4chan X</a>
 </div>
 <script type="text/javascript">
 var elems = document.getElementsByClassName('addinfo');
