--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 <li>Intersting things<a targetid="projects" class="addinfo" href="#">[Show]</a></li>
 <div id="projects" style="display: none;">
 Here are some interesting things for you to look into:<br>
-<a href="https://www.eff.org/" title=EFF">Electronic Frontier Foundation</a>
+<a href="https://www.eff.org/" title=EFF">Electronic Frontier Foundation</a><br>
 <a href="https://freenetproject.org/" title=freenet">Freenet</a><br>
 <a href="https://geti2p.net/" title=i2p">i2p</a><br>
-<a href="https://www.torproject.org/" title=Tor">Tor</a>
+<a href="https://www.torproject.org/" title=Tor">Tor</a><br>
 <a href="https://wikileaks.org/" title=Wikileaks">Wikileaks</a>
 </div>
 <li>Sites: Here are some sites I browse frequently.<a class="addinfo" href="#" targetid="sites">[Show]</a></li>
