--- a/Metal.html
+++ b/Metal.html
@@ -9,17 +9,17 @@
     <link rel="stylesheet" type="text/css" href="/css/print.css" media="print" />
 
     <title>Metal</title>
-	<style type="text/css"><!--
+  <style type="text/css"><!--
 body { color: #9acc79; }" 
 //-->
 </style>
-	<script type="text/javascript">
-		function toggle(id){
-			var elem = document.getElementById(id);
-			var to = elem.style.display=="block"?"none":"block";
-			elem.style.display=to;
-		}
-	</script>
+  <script type="text/javascript">
+    function toggle(id){
+      var elem = document.getElementById(id);
+      var to = elem.style.display=="block"?"none":"block";
+      elem.style.display=to;
+    }
+  </script>
   </head>
 
   <body>
@@ -383,7 +383,7 @@ body { color: #9acc79; }"
 ./Black Sabbath/Albums/[1971] Master of Reality [UK ESM CD 303 Castle] (1996) (FLAC)/Scans<br>
 ./Black Sabbath/Albums/[1971] Master of Reality [UK ESM CD 303 Castle] (1996) (FLAC)/Technical<br>
 ./Black Sabbath/Albums/[1971] Master of Reality [Universal Japan - Sanctuary UIGY-9503 SHM-SACD Remaster] (2011) (FLAC)<br>
-./Black Sabbath/Albums/[1971] Master of Reality [Universal Japan - Sanctuary UIGY-9503 SHM-SACD Remaster] (2011) (FLAC)/Artwork<br>
+./Black Sabbath/Albums/[1971] Master of Reality [Universal Japan - Sanctuary UIGY-9503 SHM-SACD Remaster] (2011) (FLAC)/<br>Artwork
 ./Black Sabbath/Albums/[1971] Master of Reality [Universal-Sanctuary 2701103 Deluxe Edition] (2009)<br>
 ./Black Sabbath/Albums/[1971] Master of Reality [Universal-Sanctuary 2701103 Deluxe Edition] (2009)/Disc 1<br>
 ./Black Sabbath/Albums/[1971] Master of Reality [Universal-Sanctuary 2701103 Deluxe Edition] (2009)/Disc 2<br>
@@ -674,6 +674,19 @@ body { color: #9acc79; }"
 ./Cerebral Bore - Maniacal Miscreation (2010)<br>
 ./Chaos Moon - Languor Into Echoes, Beyond (2007)<br>
 ./Chapel - Satan's Rock 'N' Roll (2012)<br>
+./Children of Bodom<br>
+./Children of Bodom/[1999] Downfall [Single]<br>
+./Children of Bodom/[2000] Follow the Reaper [Japanese Import]<br>
+./Children of Bodom/[2000] Hate Me! [Single]<br>
+./Children of Bodom/[2002] You're Better Off Dead! [Single]<br>
+./Children of Bodom/[2004] Trashed, Lost, and Strungout EP<br>
+./Children of Bodom/[2005] Are You Dead Yet [Japanese Import]<br>
+./Children of Bodom/[2008] Blooddrunk [Japanese Import]<br>
+./Children of Bodom/[2008] Blooddrunk [Single] [Finland Edition]<br>
+./Children of Bodom/[2008] Hellhounds on My Trail EP<br>
+./Children of Bodom/[2011] Relentless Reckless Forever [Deluxe Edition]<br>
+./Children of Bodom/[2013] Halo of Blood [Limited Edition]<br>
+./Children of Bodom/[2015] I Worship Chaos<br>
 ./Christicide<br>
 ./Christicide/[2007] Christicide<br>
 ./Christicide/[2013] Upheaval of the Soul<br>
@@ -761,7 +774,10 @@ body { color: #9acc79; }"
 ./Cradle of Filth/Singles/[2006] Dirge Inferno<br>
 ./Cradle of Filth/Singles/[2008] Honey and Sulphur + Midnight Shadows Crawl to Darken<br>
 ./Crebain - The Night of the Stormcrow [Demo] (2003)<br>
-./Crematory - Act Seven (1999)<br>
+./Crematory<br>
+./Crematory/[1996] Crematory<br>
+./Crematory/[1997] Awake<br>
+./Crematory/[1999] Act Seven<br>
 ./Crowbar<br>
 ./Crowbar/Albums<br>
 ./Crowbar/Albums/[1992] Obedience Thru Suffering (FLAC)<br>
@@ -841,6 +857,7 @@ body { color: #9acc79; }"
 ./Danzig/[2007] The Lost Tracks of Danzig (FLAC)/Disc 1<br>
 ./Danzig/[2007] The Lost Tracks of Danzig (FLAC)/Disc 2<br>
 ./Danzig/[2010] Deth Red Sabaoth (FLAC)<br>
+./Dark Angel - Darkness Descends (1986) [2008 Remaster]<br>
 ./Dark Castle<br>
 ./Dark Castle/[2007] Flight of Pegasus EP<br>
 ./Dark Castle/[2009] Spirited Migration<br>
@@ -1215,8 +1232,8 @@ body { color: #9acc79; }"
 ./Fatal Embrace - Shadowsouls' Garden (1997)<br>
 ./Fear Factory<br>
 ./Fear Factory/[1992] Soul of a New Machine & Fear Is the Mindkiller [Roadrunner, 168 618 257-2, USA]<br>
-./Fear Factory/[1992] Soul of a New Machine & Fear Is the Mindkiller [Roadrunner, 168 618 257-2, USA]/Disc 1 (Soul of a New Machine)<br>
-./Fear Factory/[1992] Soul of a New Machine & Fear Is the Mindkiller [Roadrunner, 168 618 257-2, USA]/Disc 2 (Feat Is the Mindkiller)<br>
+./Fear Factory/[1992] Soul of a New Machine & Fear Is the Mindkiller [Roadrunner, 168 618 257-2, USA]/Disc 1 (Soul of a <br>New Machine)
+./Fear Factory/[1992] Soul of a New Machine & Fear Is the Mindkiller [Roadrunner, 168 618 257-2, USA]/Disc 2 (Feat Is the <br>Mindkiller)
 ./Fear Factory/[1995] Demanufacture [Roadrunner, RR 8155-5, EU]<br>
 ./Fear Factory/[1995] Demanufacture [Roadrunner, RR 8155-5, EU]/Disc 1 (Demanufacture)<br>
 ./Fear Factory/[1995] Demanufacture [Roadrunner, RR 8155-5, EU]/Disc 2 (Remanufacture)<br>
@@ -1238,7 +1255,6 @@ body { color: #9acc79; }"
 ./Fides Inversa - Hanc Aciem Sola Retundit Virtus (2010)<br>
 ./Finger Eleven<br>
 ./Finger Eleven/[2000] The Greyest of Blue Skies<br>
-./Finger Eleven/[2007] Them vs. You vs. Me<br>
 ./Finntroll<br>
 ./Finntroll/[1998] Rivfader<br>
 ./Finntroll/[1999] Midnattens Widunder<br>
@@ -1365,6 +1381,7 @@ body { color: #9acc79; }"
 ./Gorguts/[1998] Obscura<br>
 ./Gorguts/[2001] From Wisdom to Hate<br>
 ./Gorguts/[2013] Colored Sands<br>
+./Grand Belial's Key - Kosherat (2005)<br>
 ./Grave<br>
 ./Grave/[2010] Death Unhallowed Box Set (FLAC)<br>
 ./Grave/[2010] Death Unhallowed Box Set (FLAC)/Disc 01 - [2010] Putrefaction of the Corpse<br>
@@ -1599,6 +1616,7 @@ body { color: #9acc79; }"
 ./Job for a Cowboy/[2011] Gloom EP<br>
 ./Job for a Cowboy/[2012] Demonocracy<br>
 ./Jotunspor - Gleipnirs Smeder (2006)<br>
+./Judas Priest - Jugulator (1997)<br>
 ./Kaliban - The Tempest of Thoughts (2002)<br>
 ./Katatonia<br>
 ./Katatonia/Albums<br>
@@ -1903,10 +1921,11 @@ body { color: #9acc79; }"
 ./Mayhem<br>
 ./Mayhem/[1986] Pure Fucking Armageddon [Demo]<br>
 ./Mayhem/[1987] Deathcrush<br>
-./Mayhem/[1992] From the Darkest Past<br>
 ./Mayhem/[1993] Live in Leipzig [2007 Reissue] (FLAC)<br>
 ./Mayhem/[1994] De Mysteriis dom Sathanas [2013 BOBV048LPLTD Vinyl] (FLAC)<br>
 ./Mayhem/[1994] De Mysteriis dom Sathanas [2013 BOBV048LPLTD Vinyl] (FLAC)/photos<br>
+./Mayhem/[1994] De Mysteriis dom Sathanas [8-Bit Versions]<br>
+./Mayhem/[1994] De Mysteriis dom Sathanas Instrumentals [Deathlike Silence Productions Anti-Mosh 010] (FLAC)<br>
 ./Mayhem/[1995] Dawn of the Black Hearts [2001 Reissue] (FLAC)<br>
 ./Mayhem/[1996] Freezing Moon [Single] (FLAC)<br>
 ./Mayhem/[1996] Out From The Dark (Dead's Last Rehearsal)<br>
@@ -1919,6 +1938,7 @@ body { color: #9acc79; }"
 ./Mayhem/[2004] Chimera<br>
 ./Mayhem/[2006] U.S. Legions<br>
 ./Mayhem/[2007] Ordo Ad Chao<br>
+./Mayhem/[2008] From the Darkest Past [DNR 001]<br>
 ./Maze of Roots - 2013 EP (2013)<br>
 ./Mendel - Shaking Hands with the Devil + Subliminal Colors (2014)<br>
 ./Mendel - Shaking Hands with the Devil + Subliminal Colors (2014)/Disc 1<br>
@@ -1933,6 +1953,7 @@ body { color: #9acc79; }"
 ./Mercyful Fate/[1982] Mercyful Fate [Rave-On Records RMLP-002 Original Dutch Pressing]<br>
 ./Mercyful Fate/[1983] Melissa<br>
 ./Mercyful Fate/[1984] Don't Break the Oath<br>
+./Mercy - Witchburner (1985)<br>
 ./Meshuggah<br>
 ./Meshuggah/[1991] Contradictions Collapse [2008 Reissue]<br>
 ./Meshuggah/[1995] Destroy Erase Improve [2008 Reissue]<br>
@@ -1942,10 +1963,14 @@ body { color: #9acc79; }"
 ./Meshuggah/[2008] obZen<br>
 ./Meshuggah/[2012] Koloss<br>
 ./Metallica<br>
+./Metallica/[1983] Kill 'em All [2016 Remaster]<br>
+./Metallica/[1983] Kill 'em All [2016 Remaster]/Disc 3 [Rough Mixes from Lars' Vault & The Whiplash EP Tracks]<br>
 ./Metallica/[1983] Kill 'Em All [Megaforce Records MRI CD 069] (FLAC)<br>
 ./Metallica/[1983] Kill 'Em All [Megaforce Records MRI CD 069] (FLAC)/Artwork<br>
 ./Metallica/[1984] Ride the Lightning [2010 Japan UICY94663] (FLAC)<br>
 ./Metallica/[1984] Ride the Lightning [2010 Japan UICY94663] (FLAC)/Covers<br>
+./Metallica/[1984] Ride the Lightning [2016 Remaster]<br>
+./Metallica/[1984] Ride the Lightning [2016 Remaster]/Disc 3 [Demos & Rough Mixes from Lars' Vault]<br>
 ./Metallica/[1984] Ride the Lightning [25DP 5340] (FLAC)<br>
 ./Metallica/[1984] Ride the Lightning [25DP 5340] (FLAC)/Artwork<br>
 ./Metallica/[1984] Ride the Lightning [33rpm]<br>
@@ -2430,7 +2455,6 @@ body { color: #9acc79; }"
 ./Orgy<br>
 ./Orgy/[1998] Candyass<br>
 ./Orgy/[1998] Stiches + Blue Monday [Remixes]<br>
-./Orgy/[1998] Stitches [Maxi Single]<br>
 ./Orgy/[1999] Blue Monday [Maxi-Single]<br>
 ./Orgy/[1999] Stitches + Dissention [Single]<br>
 ./Orgy/[2000] Vapor Transmission<br>
@@ -2452,6 +2476,7 @@ body { color: #9acc79; }"
 ./Otyg/[1999] Sagovindars Boning<br>
 ./Overkill<br>
 ./Overkill/[1985] Feel the Fire<br>
+./Overkill/[1991] Horrorscope<br>
 ./Overkill/[1997] !!! Fuck You !!! and Then Some<br>
 ./Ov Hell - The Underworld Regime (2010)<br>
 ./Ozzy Osbourne<br>
@@ -2604,6 +2629,7 @@ body { color: #9acc79; }"
 ./Papa Roach/[1998] 5 Track's Deep EP<br>
 ./Papa Roach/[1999] Let 'Em Know EP<br>
 ./Papa Roach/[2000] Infest [Advance Promo] (FLAC)<br>
+./Papa Roach/[2002] Lovehatetragedy [Limited Edition]<br>
 ./Papa Roach/[2004] Getting Away with Murder<br>
 ./Papa Roach/[2006] The Paramour Sessions<br>
 ./Papa Roach/[2010] Time for Annihilation<br>
@@ -2780,8 +2806,8 @@ body { color: #9acc79; }"
 ./Rob Zombie/[2001] The Sinister Urge [Deluxe Edition] (FLAC)<br>
 ./Rob Zombie/[2001] The Sinister Urge [Deluxe Edition] (FLAC)/Disc 1<br>
 ./Rob Zombie/[2001] The Sinister Urge [Deluxe Edition] (FLAC)/Disc 2<br>
-./Rob Zombie/[2003] Past, Present & Future<br>
-./Rob Zombie/[2006] Educated Horses [Advance]<br>
+./Rob Zombie/[2003] Past, Present and Future <br>
+./Rob Zombie/[2006] Educated Horses<br>
 ./Rob Zombie/[2009] Sick Bubblegum [CDS]<br>
 ./Rob Zombie/[2010] Hellbilly Deluxe 2<br>
 ./Rob Zombie/[2010] Hellbilly Deluxe II [Digipak]<br>
@@ -2796,11 +2822,11 @@ body { color: #9acc79; }"
 ./Rotting Christ/[1994] Non Seviam<br>
 ./Rotting Christ/[1996] Triarchy of the Lost Lovers<br>
 ./Rotting Christ/[1997] A Dead Poem<br>
-./Rotting Christ/[1997] A Dead Poem/Scans<br>
 ./Rotting Christ/[2000] Khronos<br>
 ./Rotting Christ/[2002] Genesis<br>
 ./Rotting Christ/[2007] Theogonia<br>
 ./Rotting Christ/[2010] Aealo<br>
+./Rotting Christ/[2016] Rituals<br>
 ./Ruby the Hatchet - Valley of the Snake (2015)<br>
 ./Rue & Aldebaran - Split (2004)<br>
 ./Ruhr Hunter<br>
@@ -2887,6 +2913,7 @@ body { color: #9acc79; }"
 ./Sear Bliss/[2004] Glory and Perdition<br>
 ./Sear Bliss/[2007] The Arcane Odyssey<br>
 ./Seeds of Iblis - Jihad Against Islam EP (2011)<br>
+./Septic Flesh - Communion (2008)<br>
 ./Sepultura<br>
 ./Sepultura/[1997] Blood-Rooted [Compilation]<br>
 ./Sepultura/Albums<br>
@@ -3092,9 +3119,9 @@ body { color: #9acc79; }"
 ./Stone Sour/[2002] Demo<br>
 ./Stone Sour/[2002] Stone Sour<br>
 ./Stone Sour/[2006] Come What(ever) May<br>
-./Stone Sour/[2010] Audio Secrecy<br>
+./Stone Sour/[2010] Audio Secrecy [Deluxe Edition]<br>
 ./Stone Sour/[2012] House of Gold and Bones Part 1<br>
-./Stone Sour/[2013] House of Gold and Bones Part 2 [Japanese Edition]<br>
+./Stone Sour/[2013] House of Gold and Bones Part 2<br>
 ./Stone Titan - Scratch 'N Sniff (2013)<br>
 ./Storm - Nordavind (1995) (FLAC)<br>
 ./Strydegor - Back on Ancient Traces (2009)<br>
@@ -3120,6 +3147,7 @@ body { color: #9acc79; }"
 ./SuidAkrA/[2005] Command to Charge<br>
 ./SuidAkrA/[2006] Caledonia<br>
 ./SuidAkrA/[2009] Crógacht<br>
+./SuidAkrA/[2016] Realms of Odoric<br>
 ./Summoner - Atlantian (2013)<br>
 ./Summoning<br>
 ./Summoning/[1994] Anno Mortiri Domini 1959<br>
@@ -3337,7 +3365,9 @@ body { color: #9acc79; }"
 ./Troll/[2000] The Last Predators<br>
 ./Troll/[2001] Universal<br>
 ./Troll/[2010] Neo-Satanic Supremacy<br>
-./Trouble - Psalm 9 (1984)<br>
+./Trouble<br>
+./Trouble/[1984] Psalm 9<br>
+./Trouble/[2007] Simple Mind Condition<br>
 ./Tsjuder<br>
 ./Tsjuder/[1995] Div Gammelt Stasj<br>
 ./Tsjuder/[1995] Ved Ferdens Ende<br>
@@ -3358,6 +3388,7 @@ body { color: #9acc79; }"
 ./Type O Negative/Albums<br>
 ./Type O Negative/Albums/[1991] Slow, Deep and Hard (FLAC)<br>
 ./Type O Negative/Albums/[1991] Slow, Deep and Hard (FLAC)/Covers<br>
+./Type O Negative/Albums/[1992] The Origin of the Feces [1997 RR 8762-2 Gold Pressed Remastered Edition] (FLAC)<br>
 ./Type O Negative/Albums/[1993] Bloody Kisses [Japan RRCY-3014] (FLAC)<br>
 ./Type O Negative/Albums/[1993] Bloody Kisses [Japan RRCY-3014] (FLAC)/scans<br>
 ./Type O Negative/Albums/[1993] Bloody Kisses [Remastered] [Disc 2] (FLAC)<br>
@@ -3367,7 +3398,6 @@ body { color: #9acc79; }"
 ./Type O Negative/Albums/[1993] Bloody Kisses [Special Edition]/Disc 2<br>
 ./Type O Negative/Albums/[1996] October Rust [Japan RRCY-1014] (FLAC)<br>
 ./Type O Negative/Albums/[1996] October Rust [Japan RRCY-1014] (FLAC)/scans<br>
-./Type O Negative/Albums/[1997] The Origin of the Feces (1992) [RR 8762-2 Gold Pressed Remastered Edition] (FLAC)<br>
 ./Type O Negative/Albums/[1999] World Coming Down [RR 8660-2] (FLAC)<br>
 ./Type O Negative/Albums/[2003] Life is Killing Me [Limited Edition] (FLAC)<br>
 ./Type O Negative/Albums/[2003] Life is Killing Me [Limited Edition] (FLAC)/Artwork<br>
@@ -3625,6 +3655,7 @@ body { color: #9acc79; }"
 ./Wodensthrone/[2012] Curse<br>
 ./Wodensthrone & Niroth - Split (2006)<br>
 ./Wodensthrone & Niroth - Split (2006)/Covers<br>
+./Wode - Wode (2016)<br>
 ./Woe<br>
 ./Woe/[2008] A Spell for the Death of Man<br>
 ./Woe/[2013] Withdrawal<br>
