--- a/Rock.html
+++ b/Rock.html
@@ -28,7 +28,37 @@ body { color: #9acc79; }"
       <div class="container">
         <a href="index.html" class="btn">Back to Stash</a>
         <h2></h2>
+</body>
+</html><!DOCTYPE html>
+<html>
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
+    <link rel="stylesheet" type="text/css" href="/css/main.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/css/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/css/print.css" media="print" />
+
+    <title>Rock</title>
+	<style type="text/css"><!--
+body { color: #9acc79; }" 
+//-->
+</style>
+	<script type="text/javascript">
+		function toggle(id){
+			var elem = document.getElementById(id);
+			var to = elem.style.display=="block"?"none":"block";
+			elem.style.display=to;
+		}
+	</script>
+  </head>
+
+  <body>
+
+    <header>
+      <div class="container">
+        <a href="index.html" class="btn">Back to Stash</a>
+        <h2></h2>
 ./3 Doors Down - Away from the Sun (2002)<br>
 ./ACDC<br>
 ./ACDC/[1974] High Voltage [Albert 465250 2] (FLAC)<br>
@@ -51,12 +81,12 @@ body { color: #9acc79; }"
 ./ACDC/[2009] Black Ice [Albert 88697392382] (FLAC)<br>
 ./Alice Cooper<br>
 ./Alice Cooper/[1973] Billion Dollar Babies [PBTHAL Vinyl Rip] (FLAC)<br>
-./Alice Cooper/[1973] Billion Dollar Babies [PBTHAL Vinyl Rip] (FLAC)/_artwork<br>
 ./Alice Cooper/[1975] Welcome to My Nightmare [2002 Remaster]<br>
 ./Alice in Chains<br>
 ./Alice in Chains/[1990] Facelift [COL 467201 1 UK First Pressing]<br>
 ./Alice in Chains/[1992] Dirt [COL 472330 1] [Dutch First Pressing]<br>
 ./Andrew W.K. - I Get Wet [Japanese Retail] (2001)<br>
+./Angels & Airwaves - We Don't Need to Whisper (2006)<br>
 ./ASG<br>
 ./ASG/[2003] The Amplification of Self Gratification<br>
 ./ASG/[2005] Feeling Good is Good Enough<br>
@@ -70,11 +100,8 @@ body { color: #9acc79; }"
 ./Big Red Panda - Big Red Panda (2014)<br>
 ./Billy Joel<br>
 ./Billy Joel/[1977] The Stranger [30th Anniversary 180g Vinyl] (FLAC)<br>
-./Billy Joel/[1977] The Stranger [30th Anniversary 180g Vinyl] (FLAC)/Artwork<br>
 ./Billy Joel/[1977] The Stranger [Columbia - JC 34987 - Original US Pressing] (FLAC)<br>
-./Billy Joel/[1977] The Stranger [Columbia - JC 34987 - Original US Pressing] (FLAC)/_artwork<br>
 ./Billy Joel/[1978] 52nd Street [Japan MiniLP CD MHCP-464] (FLAC)<br>
-./Billy Joel/[1978] 52nd Street [Japan MiniLP CD MHCP-464] (FLAC)/Artwork<br>
 ./Billy Joel/[1989] Storm Front (FLAC)<br>
 ./Billy Joel/The Complete Hits Collection 1973-1997<br>
 ./Billy Joel/The Complete Hits Collection 1973-1997/Disc 1<br>
@@ -83,14 +110,12 @@ body { color: #9acc79; }"
 ./Black Pussy - Magic Mustache (2015)<br>
 ./Black Rainbows - Hawkdope (2015)<br>
 ./Black Widow - The Ultimate Sacrifice (2004)<br>
-./Black Widow - The Ultimate Sacrifice (2004)/Artwork<br>
 ./Blondie - Greatest Hits<br>
 ./Blue Cheer - Vincebus Eruptum + Outsideinside (2003)<br>
 ./Blue Öyster Cult - Agents of Fortune (1976) [28DP-1070 Japanese First Pressing] (FLAC)<br>
 ./Blues Druid - Three Trees (2014)<br>
 ./Blues Pills - Blues Pills [Exklusive Edition] (2014)<br>
 ./Boston - Boston (1976) [1996 MFSL 1-249] (FLAC)<br>
-./Boston - Boston (1976) [1996 MFSL 1-249] (FLAC)/_artwork<br>
 ./Bruce Cockburn - Stealing Fire (1984)<br>
 ./Bryan Adams - Reckless (1984) [2012 SHM-CD] [UICY-94822]<br>
 ./CKY<br>
@@ -112,7 +137,6 @@ body { color: #9acc79; }"
 ./Colour Haze - To the Highest Gods We Know (2014)/Art<br>
 ./Coven<br>
 ./Coven/[1969] Witchcraft (Destroys Minds and Reaps Souls) (FLAC)<br>
-./Coven/[1969] Witchcraft (Destroys Minds and Reaps Souls) (FLAC)/artwork<br>
 ./Coven/[1972] Coven<br>
 ./Coven/[2008] 40 Years of Hell (FLAC)<br>
 ./Crazy Town<br>
@@ -129,6 +153,9 @@ body { color: #9acc79; }"
 ./Creedence Clearwater Revival/[1970] Cosmo's Factory (FLAC)<br>
 ./Creedence Clearwater Revival/[1970] Pendulum [SACD] (FLAC)<br>
 ./Creedence Clearwater Revival/[1970] Pendulum [SACD] (FLAC)/covers<br>
+./Creed - Human Clay (2001) [Asian Edition]<br>
+./Creed - Human Clay (2001) [Asian Edition]/disc1<br>
+./Creed - Human Clay (2001) [Asian Edition]/disc2<br>
 ./David Bowie<br>
 ./David Bowie/[1971] Hunky Dory [1997 Rykodisc RCD 80133]<br>
 ./David Bowie/[1971] Low [1994 Rykodisc RCD 80142]<br>
@@ -152,7 +179,6 @@ body { color: #9acc79; }"
 ./Dire Straits<br>
 ./Dire Straits/[1978] Dire Straits (3266-2) [Target CD B7220A] (FLAC)<br>
 ./Dire Straits/[1979] Communique' [2012 SHM-SACD] (FLAC)<br>
-./Dire Straits/[1979] Communique' [2012 SHM-SACD] (FLAC)/Artwork<br>
 ./Dire Straits/[1980] Making Movies [Warner 3480-2] (FLAC)<br>
 ./Dire Straits/[1982] Love Over Gold [Warner 9 23728-2] (FLAC)<br>
 ./Dire Straits/[1985] Brothers In Arms [PHCR-1122] (FLAC)<br>
@@ -397,12 +423,15 @@ body { color: #9acc79; }"
 ./Grateful Dead/Dick's Picks/Vol. 36 (2005)/Disc 3<br>
 ./Grateful Dead/Dick's Picks/Vol. 36 (2005)/Disc 4<br>
 ./Grateful Dead/Grateful Dead Live at 1984 Studio Material on 1984-02-21<br>
-./Grateful Dead/Live<br>
-./Grateful Dead/Live/Live at Fillmore West 1968-06-08<br>
+./Grateful Dead/Soundboards<br>
+./Grateful Dead/Soundboards/[1966-xx-xx] Unknown Location (FLAC)<br>
+./Grateful Dead/Soundboards/[1968-06-08] Live at Fillmore West<br>
+./Grateful Dead/Soundboards/[1968-09-12] Clementine Practise Session (FLAC)<br>
+./Grateful Dead/Soundboards/[1970-05-14] Meramec Community College, Kirkwood, MO (FLAC)<br>
 ./Grateful Dead/The Grateful Dead & The Merry Pranksters 1965-1967 Acid Tests<br>
-./Grateful Dead/The Grateful Dead & The Merry Pranksters 1965-1967 Acid Tests/Disc 1 (Fillmore Acid Test & Sound City Acid Test)<br>
-./Grateful Dead/The Grateful Dead & The Merry Pranksters 1965-1967 Acid Tests/Disc 2 (Pico Acid Test & S.F. State U Acid Test [pt.1])<br>
-./Grateful Dead/The Grateful Dead & The Merry Pranksters 1965-1967 Acid Tests/Disc 3 (S.F. State U Acid Test [pt. 2)] & Graduation Jam)<br>
+./Grateful Dead/The Grateful Dead & The Merry Pranksters 1965-1967 Acid Tests/Disc 1 (Fillmore Acid Test & Sound City Acid <br>Test)
+./Grateful Dead/The Grateful Dead & The Merry Pranksters 1965-1967 Acid Tests/Disc 2 (Pico Acid Test & S.F. State U Acid <br>Test [pt.1])
+./Grateful Dead/The Grateful Dead & The Merry Pranksters 1965-1967 Acid Tests/Disc 3 (S.F. State U Acid Test [pt. 2)] & <br>Graduation Jam)
 ./Grateful Dead/The Grateful Dead & The Merry Pranksters 1965-1967 Acid Tests/Disc 4 (Related Recordings)<br>
 ./Graveyard<br>
 ./Graveyard/[2008] Graveyard [NB2767-2 Reissue] (2011)<br>
@@ -423,6 +452,10 @@ body { color: #9acc79; }"
 ./Jerry Garcia/[1982] Run for the Roses [Arista AL 9603] (FLAC)<br>
 ./Jerry Garcia/Jerry Garcia Acoustic Band - Almost Acoustic (1988) (FLAC)<br>
 ./Jerry Garcia/Jerry Garcia Band - Cats Under the Stars [Arista AB 4160] (1978) (FLAC)<br>
+./Jerry Garcia/Soundboards<br>
+./Jerry Garcia/Soundboards/[1973-09-06] Capitol Theater - Passaic NJ (FLAC)<br>
+./Jerry Garcia/Soundboards/[1973-10-11] Keystone - Berkeley, CA (FLAC)<br>
+./Jerry Garcia/Soundboards/[1974-02-16] The Keystone - Berkeley, CA (FLAC)<br>
 ./Jess and the Ancient Ones - Second Psychedelic Coming - The Aquarius Tapes (2015)<br>
 ./Jethro Tull<br>
 ./Jethro Tull/[1971] Aqualung (40th Anniverasry Edition) (2011)<br>
@@ -534,12 +567,10 @@ body { color: #9acc79; }"
 ./Nirvana/Albums<br>
 ./Nirvana/Albums/[1989] Bleach [WPCR-13269] [Japan SHM-CD] (2008)<br>
 ./Nirvana/Albums/[1991] Nevermind [US 1996 MFSL 1-258 200g Pressing] (FLAC)<br>
-./Nirvana/Albums/[1991] Nevermind [US 1996 MFSL 1-258 200g Pressing] (FLAC)/LP Artwork<br>
 ./Nirvana/Albums/[1993] In Utero [UDCD 690] [24kt Gold CD MFSL Mastered] (1997)<br>
 ./Nirvana/Albums/[1993] In Utero [UDCD 690] [24kt Gold CD MFSL Mastered] (1997)/Covers<br>
 ./Nirvana/EPs & Singles<br>
 ./Nirvana/EPs & Singles/[1989] Blew EP<br>
-./Nirvana/EPs & Singles/[1989] Blew EP/artwork<br>
 ./Nirvana/EPs & Singles/[1991] Come as You Are [Single]<br>
 ./Nirvana/EPs & Singles/[1991] Come as You Are [Single]/Covers<br>
 ./Nirvana/EPs & Singles/[1991] Come as You Are [Single]/Covers/1<br>
@@ -549,6 +580,13 @@ body { color: #9acc79; }"
 ./Nirvana/EPs & Singles/[1992] Hormoaning EP/Covers<br>
 ./Palm Desert - Pearls From The Muddy Hollow (2014)<br>
 ./Pat Benatar - Best Shots (1989)<br>
+./Pearl Jam<br>
+./Pearl Jam/[1992] Ten [Epic 468884 9]<br>
+./Pearl Jam/[1993] Vs. [Epic ZK 53136]<br>
+./Pearl Jam/[1994] Vitalogy [Epic EK 66900]<br>
+./Pearl Jam/[1996] No Code [Epic EK 67500]<br>
+./Pearl Jam/[1998] Yield [Epic 489365 2]<br>
+./Pearl Jam/[2000] Binaural [Epic 494590 2]<br>
 ./Phil Collins -  In the Air Tonight [Virgin VSCD 102] [Single] (1981) (FLAC)<br>
 ./Phil Collins -  In the Air Tonight [Virgin VSCD 102] [Single] (1981) (FLAC)/scans<br>
 ./Pink Floyd<br>
@@ -593,6 +631,9 @@ body { color: #9acc79; }"
 ./Pink Floyd/Live/[2000] Is There Anybody Out There (The Wall Live 1980-81)/Disc 2<br>
 ./Pink Floyd/Non Album Singles and Other Releases<br>
 ./Pink Floyd/Obscured By Clouds - La Vallee (Soundtrack) (1972)<br>
+./P.O.D.<br>
+./P.O.D./[1999] The Fundamental Elements of Southtown<br>
+./P.O.D./[2001] Satellite<br>
 ./Purson - The Circle and the Blue Door (2013)<br>
 ./Queen<br>
 ./Queen/[1973] Queen [1987 EMI-Toshiba, Japan, CP32-5376]<br>
@@ -716,6 +757,7 @@ body { color: #9acc79; }"
 ./The Pretty Reckless/[2011] Light Me Up [Japanese Edition] (FLAC)<br>
 ./The Pretty Reckless/[2012] Hit Me Like a Man EP (FLAC)<br>
 ./The Pretty Reckless/[2014] Going to Hell [Limited Edition] (FLAC)<br>
+./The Pretty Reckless/[2016] Take Me Down [Single]<br>
 ./The Smashing Pumpkins<br>
 ./The Smashing Pumpkins/[1993] Siamese Dream<br>
 ./The Smashing Pumpkins/[1995] Bullet with Butterfly Wings [Single]<br>
@@ -734,8 +776,6 @@ body { color: #9acc79; }"
 ./Twisted Sister - Stay Hungry (1984)<br>
 ./U2<br>
 ./U2/[1987] The Joshua Tree [2007 Universal B0010310-01 Vinyl]<br>
-./U2/[1987] The Joshua Tree [2007 Universal B0010310-01 Vinyl]/Artwork<br>
-./U2/[1987] The Joshua Tree [2007 Universal B0010310-01 Vinyl]/Artwork/Booklet<br>
 ./U2/[1991] Achtung Baby<br>
 ./U2/[2013] Ordinary Love [Single]<br>
 ./Ultimate Spinach<br>
@@ -768,6 +808,5 @@ body { color: #9acc79; }"
 ./Yes/[1972] Close to the Edge [1988 Atlantic SD 19133-2]/scans<br>
 ./Yes/[1983] 90125 [2004 Reissue] (FLAC)<br>
 ./ZZ Top - Tres Hombres (1973)<br>
-
 </body>
 </html>
