--- a/Punk.html
+++ b/Punk.html
@@ -28,7 +28,6 @@ body { color: #9acc79; }"
       <div class="container">
         <a href="index.html" class="btn">Back to Stash</a>
         <h2></h2>
-
 ./45 Grave - Sleep In Safety (1993)<br>
 ./Adolescents - Adolescents (1981) [1997 + Welcome to Reality - All by Myself]<br>
 ./AFI<br>
@@ -125,7 +124,6 @@ body { color: #9acc79; }"
 ./Misfits/Albums/[1978] Static Age (FLAC)<br>
 ./Misfits/Albums/[1978] Static Age Mix-Down Tape (FLAC)<br>
 ./Misfits/Albums/[1981] Walk Among Us [Ruby 2nd Pressing Vinyl] (FLAC)<br>
-./Misfits/Albums/[1983] Earth A.D. (Wolf's Blood)<br>
 ./Misfits/Albums/[1983] Earth A.D. (Wolf's Blood) [AG-0024 German Edition] (FLAC)<br>
 ./Misfits/Albums/[1997] American Psycho (FLAC)<br>
 ./Misfits/Albums/[1999] Famous Monsters (FLAC)<br>
@@ -146,7 +144,7 @@ body { color: #9acc79; }"
 ./Misfits/Anthologies/[1996] Box Set/CD 4<br>
 ./Misfits/Anthologies/[1996] Box Set/-scans<br>
 ./Misfits/Anthologies/[2001] Cuts from the Crypt (FLAC)<br>
-./Misfits & Balzac -  Don't Open 'Til Doomsday (2002)<br>
+./Misfits & Balzac -  Don't Open 'Til Doomsday (2002) (FLAC)<br>
 ./Misfits/Bootlegs<br>
 ./Misfits/Bootlegs/[1983] Beware - Complete Singles 77-82<br>
 ./Misfits/Bootlegs/[1989] Creepshow<br>
@@ -170,10 +168,12 @@ body { color: #9acc79; }"
 ./Misfits/EPs & Singles/[2013] Descending Angel [Single] (FLAC)<br>
 ./Misfits/EPs & Singles/[2014] Horror Xmas EP (FLAC)<br>
 ./Misfits/EPs & Singles/[2015] Vampire Girl - Zombie Girl [Single] (FLAC)<br>
+./Misfits/EPs & Singles/[2016] Friday the 13th EP<br>
 ./Misfits/Live<br>
 ./Misfits/Live/[1998] EviLive! II (FLAC)<br>
 ./Misfits/Live/[2013] DEA.D. ALIVE! (FLAC)<br>
 ./Misfits Meets The Nutley Brass - Fiend Club Lounge (2005) (FLAC)<br>
+./Misfits & The Lemonheads - Skulls [RSD 2013 Exclusive Single] (FLAC)<br>
 ./Murderdolls<br>
 ./Murderdolls/[2002] Beyond the Valley of the Murderdolls [Limited Edition]<br>
 ./Murderdolls/[2002] Right to Remain Violent EP<br>
@@ -311,6 +311,5 @@ body { color: #9acc79; }"
 ./Wednesday 13/[2011] Calling All Corpses<br>
 ./Wednesday 13/[2012] Spook & Destroy EP<br>
 ./Wednesday 13/[2013] The Dixie Dead<br>
-
 </body>
 </html>
