--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h1>Useful Shit</h1>
 
 <ul>
-<li>Intersting things<a targetid="projects" class="addinfo" href="#">[Show]</a></li>
+<li>Interesting things<a targetid="projects" class="addinfo" href="#">[Show]</a></li>
 <div id="projects" style="display: none;">
 Here are some interesting things for you to look into:<br>
 <a href="https://www.eff.org/" title=EFF">Electronic Frontier Foundation</a><br>
